force-app/main/default/objects/Contact/fields/acConName__c.field-meta.xml
<CustomField>
    <fullName>acConName__c</fullName>
    <label>acConName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>