force-app/main/default/objects/Contact/fields/Active_Syndications__c.field-meta.xml
<CustomField>
    <fullName>Active_Syndications__c</fullName>
    <label>Active Syndications</label>
    <summarizedField>Show__c.Active_Syndications__c</summarizedField>
    <summaryForeignKey>Show__c.Host__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>