force-app/main/default/objects/Contact/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <formula>IMAGE(&quot;servlet/servlet.FileDownload&quot; ,&quot;Test&quot; , 300, 300)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image URL</label>
    <type>Text</type>
</CustomField>