force-app/main/default/objects/Contact/fields/json__c.field-meta.xml
<CustomField>
    <fullName>json__c</fullName>
    <label>json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>