force-app/main/default/objects/Contact/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <label>password</label>
    <length>16</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>