force-app/main/default/objects/Contact/fields/Resettted__c.field-meta.xml
<CustomField>
    <fullName>Resettted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resetted</label>
    <type>Checkbox</type>
</CustomField>