force-app/main/default/objects/Contact/fields/Total_Account_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Total_Account_Subscriptions__c</fullName>
    <formula>Account.All_Subscriptions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Account Subscriptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>