force-app/main/default/objects/Contact/fields/Total_Shows__c.field-meta.xml
<CustomField>
    <fullName>Total_Shows__c</fullName>
    <label>Total Shows</label>
    <summaryForeignKey>Show__c.Host__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>