force-app/main/default/objects/Contact/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <label>username</label>
    <length>12</length>
    <type>Text</type>
</CustomField>